--- a/Atividades/Dialogo/index.html
+++ b/Atividades/Dialogo/index.html
@@ -264,14 +264,34 @@
         }
 
         function initializeDialogue() {
-            fetch('dialogo.txt')
-                .then(response => response.text())
-                .then(text => {
-                    dialogues = text.split('\n\n');
-                    totalDialogues = dialogues.length * 2; // Duas falas por diálogo (robô e aluno)
-                    updateDialogue(0);
-                });
-        }
+    const { level, unit } = getLevelAndUnitFromURL();
+    const dialoguePath = `../../${level}/${unit}/DataDialogo/dialogo.txt`;
+
+    fetch(dialoguePath)
+        .then(response => {
+            if (!response.ok) {
+                throw new Error(`Erro ao carregar o diálogo do caminho: ${dialoguePath}`);
+            }
+            return response.text();
+        })
+        .then(text => {
+            dialogues = text.split('\n\n');
+            totalDialogues = dialogues.length * 2; // Duas falas por diálogo (robô e aluno)
+            updateDialogue(0);
+        })
+        .catch(error => {
+            console.error("Erro ao carregar o diálogo:", error);
+            alert("Não foi possível carregar o diálogo. Verifique o caminho ou tente novamente mais tarde.");
+        });
+}
+
+function getLevelAndUnitFromURL() {
+    const params = new URLSearchParams(window.location.search);
+    const level = params.get('level') || 'defaultLevel';
+    const unit = params.get('unit') || 'defaultUnit';
+    return { level, unit };
+}
+
 
         let currentDialogueIndex = 0;
 
