--- a/Atividades/Dialogo/index.html
+++ b/Atividades/Dialogo/index.html
@@ -267,10 +267,12 @@
     const { level, unit } = getLevelAndUnitFromURL();
     const dialoguePath = `../../${level}/${unit}/DataDialogo/dialogo.txt`;
 
+    console.log("Attempting to load dialogue from:", dialoguePath); // Log para depuração
+
     fetch(dialoguePath)
         .then(response => {
             if (!response.ok) {
-                throw new Error(`Erro ao carregar o diálogo do caminho: ${dialoguePath}`);
+                throw new Error(`Failed to load the dialogue from path: ${dialoguePath}`);
             }
             return response.text();
         })
@@ -280,8 +282,8 @@
             updateDialogue(0);
         })
         .catch(error => {
-            console.error("Erro ao carregar o diálogo:", error);
-            alert("Não foi possível carregar o diálogo. Verifique o caminho ou tente novamente mais tarde.");
+            console.error("Error loading the dialogue:", error);
+            alert("Failed to load the dialogue. Please check the file path or try again later.");
         });
 }
 
@@ -291,7 +293,6 @@ function getLevelAndUnitFromURL() {
     const unit = params.get('unit') || 'defaultUnit';
     return { level, unit };
 }
-
 
         let currentDialogueIndex = 0;
 
