--- a/Atividades/Dialogo/index.html
+++ b/Atividades/Dialogo/index.html
@@ -263,7 +263,7 @@
             window.speechSynthesis.speak(utterance);
         }
 
-        function initializeDialogue() {
+      function initializeDialogue() {
     const { level, unit } = getLevelAndUnitFromURL();
     const dialoguePath = `../../${level}/${unit}/DataDialogo/dialogo.txt`;
 
@@ -289,8 +289,15 @@
 
 function getLevelAndUnitFromURL() {
     const params = new URLSearchParams(window.location.search);
-    const level = params.get('level') || 'defaultLevel';
-    const unit = params.get('unit') || 'defaultUnit';
+    const level = params.get('level');
+    const unit = params.get('unit');
+
+    // Verifica se os parâmetros estão presentes
+    if (!level || !unit) {
+        alert("Level and Unit parameters are missing in the URL.");
+        throw new Error("Missing level or unit parameters in the URL.");
+    }
+
     return { level, unit };
 }
 
