--- a/Atividades/Dialogo/index.html
+++ b/Atividades/Dialogo/index.html
@@ -263,7 +263,7 @@
             window.speechSynthesis.speak(utterance);
         }
 
-      function initializeDialogue() {
+     function initializeDialogue() {
     const { level, unit } = getLevelAndUnitFromURL();
     const dialoguePath = `../../${level}/${unit}/DataDialogo/dialogo.txt`;
 
@@ -292,10 +292,9 @@ function getLevelAndUnitFromURL() {
     const level = params.get('level');
     const unit = params.get('unit');
 
-    // Verifica se os parâmetros estão presentes
     if (!level || !unit) {
-        alert("Level and Unit parameters are missing in the URL.");
-        throw new Error("Missing level or unit parameters in the URL.");
+        alert("Missing level or unit parameters in the URL.");
+        throw new Error("Missing level or unit parameters.");
     }
 
     return { level, unit };
