--- a/Atividades/Dialogo/index.html
+++ b/Atividades/Dialogo/index.html
@@ -228,17 +228,18 @@
         let dialoguesRead = 0;
         let userName = "";
 
-        firebase.auth().onAuthStateChanged(function(user) {
-            if (user) {
-                console.log("Usuário autenticado:", user.displayName);
-                fetchUserAvatar(user.uid);
-                fetchUserName(user.uid);
-                initializeDialogue();
-            } else {
-                console.error("Usuário não autenticado.");
-                window.location.href = '/login.html';
-            }
-        });
+      firebase.auth().onAuthStateChanged(function(user) {
+    if (user) {
+        console.log("User authenticated:", user.displayName);
+        fetchUserAvatar(user.uid);
+        fetchUserName(user.uid);
+        initializeDialogue();
+    } else {
+        console.error("User not authenticated. Redirecting to login.");
+        alert("You are not authenticated. Please log in.");
+        window.location.href = '/login.html'; // Redireciona para a página de login
+    }
+});
 
         function goBack() {
             window.history.back();
@@ -263,7 +264,7 @@
             window.speechSynthesis.speak(utterance);
         }
 
-  function initializeDialogue() {
+ function initializeDialogue() {
     const { level, unit } = getLevelAndUnitFromURL();
     const dialoguePath = `../../${level}/${unit}/DataDialogo/dialogo.txt`;
 
@@ -272,17 +273,19 @@
     fetch(dialoguePath)
         .then(response => {
             if (!response.ok) {
-                throw new Error(`Failed to load the dialogue from path: ${dialoguePath}`);
+                throw new Error(`Failed to load dialogue from path: ${dialoguePath}`);
             }
             return response.text();
         })
         .then(text => {
-            dialogues = text.split('\n\n');
+            console.log("Dialogue file loaded successfully.");
+            dialogues = text.split('\n\n'); // Divide os blocos de diálogo
             totalDialogues = dialogues.length * 2; // Duas falas por diálogo (robô e aluno)
+            console.log("Total dialogues loaded:", dialogues.length);
             updateDialogue(0);
         })
         .catch(error => {
-            console.error("Error loading the dialogue:", error);
+            console.error("Error loading dialogue:", error);
             alert("Failed to load the dialogue. Please check the file path or try again later.");
         });
 }
@@ -302,24 +305,33 @@ function getLevelAndUnitFromURL() {
 
         let currentDialogueIndex = 0;
 
-        function updateDialogue(index) {
-            const lines = dialogues[index].split('\n');
-            const robotText = lines[0].replace(/usuario_nome/g, userName) || '';
-            const studentText = lines[1].replace(/usuario_nome/g, userName) || '';
+      function updateDialogue(index) {
+    if (index < 0 || index >= dialogues.length) {
+        console.error("Invalid dialogue index:", index);
+        return;
+    }
 
-            document.getElementById('robot-text').textContent = robotText;
-            document.getElementById('student-text').textContent = studentText;
+    const lines = dialogues[index].split('\n'); // Divide as falas do robô e do aluno
+    const robotText = lines[0].replace(/usuario_nome/g, userName) || '';
+    const studentText = lines[1].replace(/usuario_nome/g, userName) || '';
 
-            document.getElementById('robot-audio-button').onclick = function() {
-                speakText(robotText);
-            };
+    console.log(`Updating dialogue [${index}]:`);
+    console.log("Robot says:", robotText);
+    console.log("Student replies:", studentText);
 
-            document.getElementById('student-audio-button').onclick = function() {
-                speakText(studentText);
-            };
+    document.getElementById('robot-text').textContent = robotText;
+    document.getElementById('student-text').textContent = studentText;
 
-            startIdleTimer();
-        }
+    document.getElementById('robot-audio-button').onclick = function () {
+        speakText(robotText);
+    };
+
+    document.getElementById('student-audio-button').onclick = function () {
+        speakText(studentText);
+    };
+
+    startIdleTimer();
+}
 
         function previousDialogue() {
             if (currentDialogueIndex > 0) {
@@ -435,15 +447,7 @@ function getLevelAndUnitFromURL() {
                 console.error("Erro ao atualizar o progresso da fase:", error);
             }
         }
-
-        function getLevelAndUnitFromURL() {
-            const url = window.location.pathname;
-            const parts = url.split('/');
-            const level = parts[1];
-            const unit = parts[2];
-            return { level, unit };
-        }
-
+      
         function getPhaseFromURL() {
             const params = new URLSearchParams(window.location.search);
             return params.get('fase');
