--- a/Atividades/Dialogo/index.html
+++ b/Atividades/Dialogo/index.html
@@ -245,12 +245,12 @@
             window.history.back();
         }
 
-     function speakText(text, callback) {
+ function speakText(text, callback) {
     clearTimeout(idleTimer);
 
     const synth = window.speechSynthesis;
     let voices = synth.getVoices();
-    let alertDisplayed = false; // Garante que o alerta seja exibido apenas uma vez
+    let alertDisplayed = false; // Controla a exibição de alertas
     let selectedVoice = null;
 
     console.log("Checking for available voices...");
@@ -265,7 +265,7 @@
                 synth.onvoiceschanged = findAndSetVoice; // Tenta novamente quando as vozes forem carregadas
                 return;
             } else if (!alertDisplayed) {
-                alertDisplayed = true;
+                alertDisplayed = true; // Marca como exibido para evitar repetições
                 alert("No 'en-US' voice found. Using default voice instead.");
                 console.warn("No 'en-US' voice found. Using default voice.");
             }
@@ -273,7 +273,7 @@
             console.log("Using voice:", selectedVoice.name, "(", selectedVoice.lang, ")");
         }
 
-        // Criar a fala somente após carregar as vozes
+        // Cria a fala somente após carregar as vozes
         createUtterance();
     }
 
@@ -297,8 +297,8 @@
         };
 
         // Caso nenhuma voz esteja disponível ainda
-        if (!voices.length) {
-            alertDisplayed = true;
+        if (!voices.length && !alertDisplayed) {
+            alertDisplayed = true; // Marca como exibido
             alert("No 'en-US' voice found in your speech synthesizer. Please enable English language in your browser's speech synthesizer. For now, the default voice will be used, which may cause problems.");
             console.warn("Speech synthesis not fully loaded. Default voice may be used.");
         }
