--- a/Atividades/Dialogo/index.html
+++ b/Atividades/Dialogo/index.html
@@ -227,6 +227,7 @@
         let totalDialogues;
         let dialoguesRead = 0;
         let userName = "";
+        let alertDisplayed = false;
 
       firebase.auth().onAuthStateChanged(function(user) {
     if (user) {
@@ -250,7 +251,6 @@
 
     const synth = window.speechSynthesis;
     let voices = synth.getVoices();
-    let alertDisplayed = false; // Controla a exibição de alertas
     let selectedVoice = null;
 
     console.log("Checking for available voices...");
@@ -273,7 +273,7 @@
             console.log("Using voice:", selectedVoice.name, "(", selectedVoice.lang, ")");
         }
 
-        // Cria a fala somente após carregar as vozes
+        // Criar a fala somente após carregar as vozes
         createUtterance();
     }
 
@@ -295,13 +295,6 @@
             checkCompletion();
             startIdleTimer();
         };
-
-        // Caso nenhuma voz esteja disponível ainda
-        if (!voices.length && !alertDisplayed) {
-            alertDisplayed = true; // Marca como exibido
-            alert("No 'en-US' voice found in your speech synthesizer. Please enable English language in your browser's speech synthesizer. For now, the default voice will be used, which may cause problems.");
-            console.warn("Speech synthesis not fully loaded. Default voice may be used.");
-        }
 
         synth.speak(utterance);
     }
