--- a/index.html
+++ b/index.html
@@ -2,6 +2,20 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <!-- Favicon padrão -->
+    <link rel="icon" type="image/x-icon" href="favicon.ico">
+
+    <!-- Favicon para navegadores com tamanhos específicos -->
+    <link rel="icon" type="image/png" sizes="16x16" href="favicon-16x16.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png">
+
+    <!-- Favicon para Android (Web App Manifest) -->
+    <link rel="icon" type="image/png" sizes="192x192" href="android-chrome-192x192.png">
+    <link rel="icon" type="image/png" sizes="512x512" href="android-chrome-512x512.png">
+
+    <!-- Ícone para dispositivos Apple -->
+    <link rel="apple-touch-icon" sizes="180x180" href="apple-touch-icon.png">
+
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Hannah English - Learning English through Bible Stories</title>
     <link rel="stylesheet" href="CSS/styles.css">
