--- a/Atividades/LEX/index.html
+++ b/Atividades/LEX/index.html
@@ -65,7 +65,7 @@
 
             // Envia mensagem para o backend
             try {
-                const response = await fetch('https://seuprojeto.vercel.app/api/chat', { // Substitua pela URL gerada pelo Vercel
+                const response = await fetch('https://vercel.com/gsroquettes-projects/hannahenglishcourse', { // Substitua pela URL gerada pelo Vercel
                     method: 'POST',
                     headers: {
                         'Content-Type': 'application/json',
