--- a/Atividades/LEX/index.html
+++ b/Atividades/LEX/index.html
@@ -43,52 +43,52 @@
     <br>
     <button id="send-btn">Enviar</button>
 
-    <script>
-        const idleGif = document.getElementById('idle');
-        const talkingGif = document.getElementById('talking');
-        const speechBox = document.getElementById('speech-box');
-        const sendBtn = document.getElementById('send-btn');
-        const userInput = document.getElementById('user-input');
+   <script>
+    const idleGif = document.getElementById('idle');
+    const talkingGif = document.getElementById('talking');
+    const speechBox = document.getElementById('speech-box');
+    const sendBtn = document.getElementById('send-btn');
+    const userInput = document.getElementById('user-input');
 
-        // Função para enviar mensagem para o backend
-        async function sendMessage() {
-            const userMessage = userInput.value;
+    // Função para enviar mensagem para o backend
+    async function sendMessage() {
+        const userMessage = userInput.value;
 
-            if (!userMessage.trim()) {
-                alert("Por favor, digite uma mensagem!");
-                return;
-            }
-
-            // Mostra o GIF de fala
-            idleGif.style.display = 'none';
-            talkingGif.style.display = 'block';
-
-            // Envia mensagem para o backend
-            try {
-                const response = await fetch('https://vercel.com/gsroquettes-projects/hannahenglishcourse', { // Substitua pela URL gerada pelo Vercel
-                    method: 'POST',
-                    headers: {
-                        'Content-Type': 'application/json',
-                    },
-                    body: JSON.stringify({ message: userMessage }),
-                });
-                const data = await response.json();
-
-                // Mostra a resposta no balão de fala
-                speechBox.textContent = data.response;
-            } catch (error) {
-                speechBox.textContent = "Ops! Algo deu errado.";
-            } finally {
-                // Volta para o GIF parado após 2 segundos
-                setTimeout(() => {
-                    talkingGif.style.display = 'none';
-                    idleGif.style.display = 'block';
-                }, 2000);
-            }
+        if (!userMessage.trim()) {
+            alert("Por favor, digite uma mensagem!");
+            return;
         }
 
-        // Adiciona evento ao botão
-        sendBtn.addEventListener('click', sendMessage);
-    </script>
+        // Mostra o GIF de fala
+        idleGif.style.display = 'none';
+        talkingGif.style.display = 'block';
+
+        // Envia mensagem para o backend
+        try {
+            const response = await fetch('https://hannahenglishcourse.vercel.app/api/chat', { // URL correta
+                method: 'POST',
+                headers: {
+                    'Content-Type': 'application/json',
+                },
+                body: JSON.stringify({ message: userMessage }),
+            });
+            const data = await response.json();
+
+            // Mostra a resposta no balão de fala
+            speechBox.textContent = data.response;
+        } catch (error) {
+            speechBox.textContent = "Ops! Algo deu errado.";
+        } finally {
+            // Volta para o GIF parado após 2 segundos
+            setTimeout(() => {
+                talkingGif.style.display = 'none';
+                idleGif.style.display = 'block';
+            }, 2000);
+        }
+    }
+
+    // Adiciona evento ao botão
+    sendBtn.addEventListener('click', sendMessage);
+</script>
 </body>
 </html>
