--- a/Atividades/LEX/index.html
+++ b/Atividades/LEX/index.html
@@ -74,9 +74,14 @@
             });
             const data = await response.json();
 
+            if (!response.ok) {
+                throw new Error(data.response || "Erro ao processar a mensagem.");
+            }
+
             // Mostra a resposta no balão de fala
             speechBox.textContent = data.response;
         } catch (error) {
+            console.error("Erro no fetch:", error);
             speechBox.textContent = "Ops! Algo deu errado.";
         } finally {
             // Volta para o GIF parado após 2 segundos
@@ -89,6 +94,6 @@
 
     // Adiciona evento ao botão
     sendBtn.addEventListener('click', sendMessage);
-</script>
+   </script>
 </body>
 </html>
