--- a/Atividades/LEX/index.html
+++ b/Atividades/LEX/index.html
@@ -65,7 +65,7 @@
 
         // Envia mensagem para o backend
         try {
-            const response = await fetch('https://hannahenglishcourse.vercel.app/api/chat', { // URL correta
+            const response = await fetch('https://hannahenglishcourse.vercel.app/api/server', {
                 method: 'POST',
                 headers: {
                     'Content-Type': 'application/json',
