--- a/Atividades/LEX/index.html
+++ b/Atividades/LEX/index.html
@@ -3,89 +3,62 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Chat com o Robô</title>
+    <title>Robô Inteligente</title>
     <style>
         body {
             font-family: Arial, sans-serif;
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-            justify-content: center;
-            height: 100vh;
-            margin: 0;
-            background-color: #f4f4f4;
+            text-align: center;
+            padding-top: 50px;
         }
-
-        .robot-container {
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-        }
-
-        .robot-img {
+        img {
             width: 200px;
         }
-
-        .chat-container {
-            margin-top: 20px;
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-        }
-
         input[type="text"] {
             width: 300px;
-            padding: 10px;
-            margin-bottom: 10px;
-            border: 1px solid #ccc;
-            border-radius: 5px;
+            height: 30px;
+            font-size: 16px;
         }
-
         button {
-            padding: 10px 20px;
-            background-color: #28a745;
-            color: #fff;
+            height: 36px;
+            padding: 0 20px;
+            font-size: 16px;
+            background-color: #4CAF50;
+            color: white;
             border: none;
-            border-radius: 5px;
             cursor: pointer;
         }
-
         button:hover {
-            background-color: #218838;
+            background-color: #45a049;
         }
-
-        .error-message {
+        .message {
             color: red;
+            font-weight: bold;
             margin-top: 10px;
         }
     </style>
 </head>
 <body>
-    <div class="robot-container">
-        <img src="../../imagens/robo1_static.png" alt="Robô" id="robotImg" class="robot-img">
-        <h2>Robô</h2>
-    </div>
-    <div class="chat-container">
-        <input type="text" id="userInput" placeholder="Digite sua mensagem...">
-        <button onclick="sendMessage()">Enviar</button>
-        <p id="errorMessage" class="error-message"></p>
-    </div>
+    <img id="robo-image" src="../../imagens/robo1_static.png" alt="Robô">
+    <h1>Robô</h1>
+    <input type="text" id="user-input" placeholder="Digite sua mensagem">
+    <button id="send-button">Enviar</button>
+    <p class="message" id="message"></p>
 
     <script>
-        const robotImg = document.getElementById('robotImg');
-        const userInput = document.getElementById('userInput');
-        const errorMessage = document.getElementById('errorMessage');
+        const roboImage = document.getElementById('robo-image');
+        const userInput = document.getElementById('user-input');
+        const sendButton = document.getElementById('send-button');
+        const messageElement = document.getElementById('message');
 
-        async function sendMessage() {
-            const message = userInput.value.trim();
-            if (!message) {
-                errorMessage.textContent = "Por favor, digite uma mensagem.";
+        sendButton.addEventListener('click', async () => {
+            const userMessage = userInput.value.trim();
+            if (!userMessage) {
+                messageElement.textContent = "Por favor, digite uma mensagem.";
                 return;
             }
-            errorMessage.textContent = "";
 
-            // Ativa o GIF do robô
-            robotImg.src = "../../imagens/robo1.gif";
+            messageElement.textContent = ""; // Limpar mensagens anteriores
+            roboImage.src = "../../imagens/robo1.gif"; // Muda para gif animado
 
             try {
                 const response = await fetch('/api/chat', {
@@ -93,21 +66,30 @@
                     headers: {
                         'Content-Type': 'application/json',
                     },
-                    body: JSON.stringify({ message }),
+                    body: JSON.stringify({ message: userMessage }),
                 });
 
-                const data = await response.json();
-                if (response.ok) {
-                    alert(`Robô: ${data.response}`);
-                } else {
-                    throw new Error(data.response || "Erro ao enviar a mensagem.");
+                if (!response.ok) {
+                    throw new Error("Erro na resposta do servidor");
                 }
+
+                const data = await response.json();
+                const roboResponse = data.response;
+
+                alert(`Robô: ${roboResponse}`);
+                speakText(roboResponse); // Faz o robô falar
             } catch (error) {
-                errorMessage.textContent = error.message;
+                console.error(error);
+                messageElement.textContent = "Erro ao enviar a mensagem.";
             } finally {
-                // Volta para a imagem estática do robô
-                robotImg.src = "../../imagens/robo1_static.png";
+                roboImage.src = "../../imagens/robo1_static.png"; // Volta para imagem estática
             }
+        });
+
+        function speakText(text) {
+            const utterance = new SpeechSynthesisUtterance(text);
+            utterance.lang = "pt-BR"; // Configurar para português do Brasil
+            window.speechSynthesis.speak(utterance);
         }
     </script>
 </body>
