--- a/Atividades/LEX/index.html
+++ b/Atividades/LEX/index.html
@@ -20,9 +20,22 @@
             color: white;
             border: none;
             cursor: pointer;
+            font-size: 16px;
         }
-        #recordButton:hover {
-            background-color: darkgreen;
+        #recordButton.listening {
+            background-color: red;
+            animation: pulse 1s infinite;
+        }
+        @keyframes pulse {
+            0% {
+                box-shadow: 0 0 5px red;
+            }
+            50% {
+                box-shadow: 0 0 15px red;
+            }
+            100% {
+                box-shadow: 0 0 5px red;
+            }
         }
         #errorMessage {
             color: red;
@@ -52,10 +65,15 @@
             robotImg.src = "../../imagens/robo1_static.png";
 
             try {
+                // Atualiza o botão para "Ouvindo..." com efeito pulsante
+                recordButton.textContent = "Ouvindo...";
+                recordButton.classList.add("listening");
                 recognition.start();
             } catch (error) {
                 console.error("Erro ao iniciar o reconhecimento de voz:", error);
                 errorMessage.textContent = "Erro ao iniciar o microfone.";
+                recordButton.textContent = "Aperte para Falar";
+                recordButton.classList.remove("listening");
             }
         });
 
@@ -94,6 +112,14 @@
         recognition.onerror = (event) => {
             console.error("Erro no reconhecimento de voz:", event.error);
             errorMessage.textContent = "Erro ao capturar a fala. Tente novamente.";
+            recordButton.textContent = "Aperte para Falar";
+            recordButton.classList.remove("listening");
+        };
+
+        recognition.onend = () => {
+            // Restaura o estado do botão após parar a escuta
+            recordButton.textContent = "Aperte para Falar";
+            recordButton.classList.remove("listening");
         };
 
         function playResponse(response) {
