--- a/Atividades/LEX/index.html
+++ b/Atividades/LEX/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
-<html lang="pt-BR">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Fale com o Robô</title>
+    <title>Talk to the Robot</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -44,10 +44,10 @@
     </style>
 </head>
 <body>
-    <h1>Fale com o Robô</h1>
-    <img id="robotImg" src="../../imagens/robo1_static.png" alt="Robô">
+    <h1>Talk to the Robot</h1>
+    <img id="robotImg" src="../../imagens/robo1_static.png" alt="Robot">
     <br>
-    <button id="recordButton">Aperte para Falar</button>
+    <button id="recordButton">Press to Speak</button>
     <p id="errorMessage"></p>
 
     <script>
@@ -57,7 +57,7 @@
         const errorMessage = document.getElementById("errorMessage");
 
         const recognition = new (window.SpeechRecognition || window.webkitSpeechRecognition)();
-        recognition.lang = "pt-BR"; // Idioma de reconhecimento de voz
+        recognition.lang = "en-US"; // English (United States)
         recognition.interimResults = false;
 
         recordButton.addEventListener("click", () => {
@@ -65,23 +65,23 @@
             robotImg.src = "../../imagens/robo1_static.png";
 
             try {
-                // Atualiza o botão para "Ouvindo..." com efeito pulsante
-                recordButton.textContent = "Ouvindo...";
+                // Update the button to show "Listening..." with pulsing effect
+                recordButton.textContent = "Listening...";
                 recordButton.classList.add("listening");
                 recognition.start();
             } catch (error) {
-                console.error("Erro ao iniciar o reconhecimento de voz:", error);
-                errorMessage.textContent = "Erro ao iniciar o microfone.";
-                recordButton.textContent = "Aperte para Falar";
+                console.error("Error starting voice recognition:", error);
+                errorMessage.textContent = "Error accessing the microphone.";
+                recordButton.textContent = "Press to Speak";
                 recordButton.classList.remove("listening");
             }
         });
 
         recognition.onresult = async (event) => {
-            const userMessage = event.results[0][0].transcript; // Captura o texto falado
-            console.log("Usuário disse:", userMessage);
+            const userMessage = event.results[0][0].transcript; // Captures the spoken text
+            console.log("User said:", userMessage);
 
-            // Trocar para o GIF do robô pensando
+            // Switch to the static robot image while processing
             robotImg.src = "../../imagens/robo1_static.png";
 
             try {
@@ -94,48 +94,48 @@
                 });
 
                 if (!response.ok) {
-                    throw new Error("Erro ao se comunicar com a API.");
+                    throw new Error("Error communicating with the API.");
                 }
 
                 const data = await response.json();
                 const botResponse = data.response;
 
-                // Reproduzir a resposta do robô
+                // Play the robot's response
                 playResponse(botResponse);
             } catch (error) {
-                console.error("Erro:", error);
-                errorMessage.textContent = "Erro ao enviar a mensagem.";
+                console.error("Error:", error);
+                errorMessage.textContent = "Error sending the message.";
                 robotImg.src = "../../imagens/robo1_static.png";
             }
         };
 
         recognition.onerror = (event) => {
-            console.error("Erro no reconhecimento de voz:", event.error);
-            errorMessage.textContent = "Erro ao capturar a fala. Tente novamente.";
-            recordButton.textContent = "Aperte para Falar";
+            console.error("Voice recognition error:", event.error);
+            errorMessage.textContent = "Error capturing speech. Please try again.";
+            recordButton.textContent = "Press to Speak";
             recordButton.classList.remove("listening");
         };
 
         recognition.onend = () => {
-            // Restaura o estado do botão após parar a escuta
-            recordButton.textContent = "Aperte para Falar";
+            // Restore the button state after stopping listening
+            recordButton.textContent = "Press to Speak";
             recordButton.classList.remove("listening");
         };
 
         function playResponse(response) {
             const synth = window.speechSynthesis;
             const utterance = new SpeechSynthesisUtterance(response);
-            utterance.lang = "pt-BR";
+            utterance.lang = "en-US"; // English (United States)
             utterance.rate = 1;
 
-            // Quando a fala começar
+            // When the speech starts
             utterance.onstart = () => {
-                robotImg.src = "../../imagens/robo1.gif"; // Inicia o GIF
+                robotImg.src = "../../imagens/robo1.gif"; // Starts the GIF
             };
 
-            // Quando a fala terminar
+            // When the speech ends
             utterance.onend = () => {
-                robotImg.src = "../../imagens/robo1_static.png"; // Volta para a imagem estática
+                robotImg.src = "../../imagens/robo1_static.png"; // Switches back to static image
             };
 
             synth.speak(utterance);
